--- a/index.html
+++ b/index.html
@@ -2,17 +2,17 @@
 
 <head>
   <meta charset="UTF-8">
-  <title>Morning Exercise // moex.</title>
-
-  <script src="./libs/p5.min.js"></script>
-  <script src="./libs/p5.dom.min.js"></script>
-  <script src="./libs/ml5.min.js" type="text/javascript"></script>
-  <script defer src="./libs/p5.collide2d.js"></script>
-  
+  <title>🕺🏻💃🏻 Morning Exercise // moex.</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="Ayo gerak! Jangan diem-diem bae!">
 </head>
 
 <body>
-  <p id='status'>memuat...</p>
+  <p id='status'>memuat kamera...</p>
+
+  <script src="./libs/p5-1.11.1.min.js"></script>
+  <script src="./libs/ml5-1.2.1.min.js"></script>
+  <script src="./libs/p5.collide2d.js"></script>
   <script src="obstacle.js"></script>
   <script src="sketch.js"></script>
 </body>
