--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <script src="./libs/p5-1.11.1.min.js"></script>
   <script src="./libs/ml5-1.2.1.min.js"></script>
   <script src="./libs/p5.collide2d.js"></script>
-  <script src="obstacle.js"></script>
+  <script src="coin.js"></script>
   <script src="sketch.js"></script>
 </body>
 
