--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
   <p id='status'>memuat kamera...</p>
 
   <script src="./libs/p5-1.11.1.min.js"></script>
+  <script src="./libs/p5.sound-1.11.3.min.js"></script>
   <script src="./libs/ml5-1.2.1.min.js"></script>
   <script src="./libs/p5.collide2d.js"></script>
   <script src="coin.js"></script>
